--- a/DatingApp-SPA/src/app/home/home.component.html
+++ b/DatingApp-SPA/src/app/home/home.component.html
@@ -3,8 +3,8 @@
     <h1>Find your match</h1>
     <p class="lead">Come on in to view your matches... All you need to do is sign up!</p>
     <div class="text-center">
-      <button class="btn btn-primary btn-lg mr-2" (click)="registerToggle()">Register</button>
-      <button class="btn btn-info btn-lg">Learn more</button>
+      <button class="btn btn-primary btn-lg mr-2 btn-lg p-4" (click)="registerToggle()">Register</button>
+      <button class="btn btn-info btn-lg p-4">Learn more</button>
     </div>
   </div>
 
