--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -1,23 +1,23 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <div class="container">
-      <a class="navbar-brand" href="#">Dating App</a>
+      <a class="navbar-brand" [routerLink]="['/home']">Dating App</a>
       <ul class="navbar-nav mr-auto" *ngIf="loggedIn()">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Matches</a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" [routerLink]="['/members']">Matches</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Lists</a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" [routerLink]="['/lists']">Lists</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Messages</a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" [routerLink]="['/messages']">Messages</a>
         </li>
       </ul>
       <div *ngIf="loggedIn()" dropdown class="dropdown">
         <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{ authService.decodedToken?.unique_name | titlecase }}</a>
         <div class="dropdown-menu mt-4" *dropdownMenu>
-          <a class="dropdown-item" href="#"><i class="fa fa-user"></i> Edit Profile</a>
+          <a class="dropdown-item"><i class="fa fa-user"></i> Edit Profile</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#" (click)="logout()"><i class="fa fa-sign-out"></i> Logout</a>
+          <a class="dropdown-item" (click)="logout()"><i class="fa fa-sign-out"></i> Logout</a>
         </div>
       </div>
       <form *ngIf="!loggedIn()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
